--- a/index.html
+++ b/index.html
@@ -3,59 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastic power</title>
+    <title>Plastic Power</title>
     <style>
-        body{
-
+        body {
             padding: 150px;
-
             background-color: rgb(10, 138, 7);
-            /*background-blend-mode: multiply;*/
             font-size: 20px;
             color: rgb(4, 54, 0);
             text-align: center;
             align-items: center;
             justify-content: center;
-            text-decoration: none;
-            align-content: center;
             list-style-type: none;
-
-
         }
-        img{
-            background:url("https://i.ytimg.com/vi/yYDmaexVHic/maxresdefault.jpg")no-repeat;
+
+        .img {
+            background: url("https://i.ytimg.com/vi/yYDmaexVHic/maxresdefault.jpg") no-repeat;
             background-color: rgb(108, 255, 123);
             background-blend-mode: multiply;
-
             background-size: 100%;
             width: 1000px;
             height: 500px;
-            padding:30px;
 
+            margin: auto;
         }
 
-        a{
+        a {
             text-decoration: none;
-            list-style-type: none;
             color: rgb(4, 54, 0);
         }
-        h1:hover{
+
+        h1:hover {
             text-transform: uppercase;
             font-size: 50px;
             color: chartreuse;
             cursor: grabbing;
-            text-shadow: 5px 2px 5px rgba(199, 1, 1, 0.51)
+            text-shadow: 5px 2px 5px rgba(199, 1, 1, 0.51);
         }
-
     </style>
 </head>
 <body>
-
-    <img>
-    <a href="https://www.youtube.com/watch?v=yYDmaexVHic" ><h1>plastic power</h1></a>
-
-
-
-
+<div class="img"></div>
+<a href="https://www.youtube.com/watch?v=yYDmaexVHic">
+    <h1>Plastic Power</h1>
+</a>
 </body>
 </html>
