--- a/index.html
+++ b/index.html
@@ -7,39 +7,38 @@
     <style>
         body {
             padding: 150px;
-            background-color: rgb(58, 169, 57);
-            font-size: 20px;
-            color: rgb(4, 54, 0);
+            background-color: rgba(217, 217, 217, 0.63);
+
+            color: rgba(37, 37, 37, 0.78);
             text-align: center;
             align-items: center;
             justify-content: center;
             list-style-type: none;
+
+            flex-grow:1;
+            font-size: 20px;
         }
 
-        .img {
-            background: url("https://i.ytimg.com/vi/yYDmaexVHic/maxresdefault.jpg") no-repeat;
-            background-color: rgb(80, 232, 97);
-            background-blend-mode: multiply;
-            background-size: 100%;
-            width: 1000px;
-            height: 500px;
-
-            margin: auto;
+        h1:hover
+        {
+            font-size: 30px;
+            color: rgba(15,15,15,08);
         }
 
-        a {
-            text-decoration: none;
-            color: rgb(4, 54, 0);
-        }
+
 
 
     </style>
 </head>
 <body>
 
-<h1></h1>
+ <h1> 架設CPI網站<br> SetUpCPIWebsite</h1>
 
-    <h1>Plastic Power</h1>
-</a>
+
+
+
+
+
+
 </body>
 </html>
