--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         {
             font-size: 100px;
             color: rgba(15,15,15,08);
+            text-shadow: 5px 2px 5px rgba(253, 0, 0, 0.62);
         }
 
 
@@ -34,6 +35,14 @@
 <body>
 
  <h1> 架設CPI網站<br> SetUpCPIWebsite</h1>
+ <br>
+ <br>
+<img src="img/webp/webp001.webp" width="1000" height="500" alt="" >
+<p>在IDE 裡建置Express.js 環境 <br> 參數設置ViewEngine:none </p>
+<br>
+ <img src="img/webp/webp002.webp" width="1000" height="500" alt="" >
+ <p>在終端機Terminal上<br> 輸入: npm install sqlite3 --save 安裝即可抓取Sqlite套件</p>
+
 
 
 
