--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             justify-content: center;
             list-style-type: none;
+            text-decoration: none;
 
 
             font-size: 20px;
@@ -25,6 +26,25 @@
             font-size: 100px;
             color: rgba(15,15,15,08);
             text-shadow: 5px 2px 5px rgba(253, 0, 0, 0.62);
+        }
+        p:hover
+        {
+            color:rgba(17,17,17);
+            font-weight: 800;
+        }
+        a{
+            list-style-type: none;
+            text-decoration: none;
+            color: rgba(7, 7, 7, 0.83);
+        }
+        a:hover
+        {
+            border: solid 5px rgba(245, 0, 0, 0.75);
+            background-color: rgba(255, 205, 0, 0.56);
+            color: rgba(21, 21, 21, 0.87);
+            font-weight: 800;
+            font-size: 30px;
+
         }
 
 
@@ -40,9 +60,13 @@
 <img src="img/webp/webp001.webp" width="1000" height="500" alt="" >
 <p>在IDE 裡建置Express.js 環境 <br> 參數設置ViewEngine:none </p>
 <br>
- <img src="img/webp/webp002.webp" width="1000" height="500" alt="" >
- <p>在終端機Terminal上<br> 輸入: npm install sqlite3 --save 安裝即可抓取Sqlite套件</p>
-
+ <img src="img/webp/webp002.webp" width="1000" height="385" alt="" >
+ <p>在終端機Terminal上<br> 輸入: npm install sqlite3 --save 安裝即可抓取Sqlite database的套件</p>
+ <br>
+ <a href="https://ithelp.ithome.com.tw/articles/10235682">安裝 Node js -- express + sqlite</a>
+ <br>
+ <br>
+ <a href=""> 資料庫整合</a>
 
 
 
