--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             font-size: 100px;
             color: rgba(15,15,15,08);
             text-shadow: 5px 2px 5px rgba(253, 0, 0, 0.62);
+            text-transform: uppercase;
+        }
+        h2:hover
+        {
+         font-size: 50px;
+         color: rgba(15,15,15,08);
+         text-shadow: 5px 2px 5px rgba(253, 0, 0, 0.62);
+         text-transform: uppercase;
         }
         p:hover
         {
@@ -41,7 +49,7 @@
         {
             border: solid 5px rgba(245, 0, 0, 0.75);
             background-color: rgba(255, 205, 0, 0.56);
-            color: rgba(21, 21, 21, 0.87);
+            color: rgba(26, 26, 26, 0.95);
             font-weight: 800;
             font-size: 30px;
 
@@ -62,11 +70,61 @@
 <br>
  <img src="img/webp/webp002.webp" width="1000" height="385" alt="" >
  <p>在終端機Terminal上<br> 輸入: npm install sqlite3 --save 安裝即可抓取Sqlite database的套件</p>
+ <img src="img/webp/webp003.webp" width="1000" height="487" alt="">
+ <p>在package.json 裡找到 dependencies <br> 若看到 "sqlite3": "^5.1.7" 即代表sqlite安裝成功 </p>
  <br>
  <a href="https://ithelp.ithome.com.tw/articles/10235682">安裝 Node js -- express + sqlite</a>
  <br>
  <br>
  <a href=""> 資料庫整合</a>
+ <br>
+ <br>
+ <br>
+ <h2>資料庫備整<br> Database preparation </h2>
+ <p>到資料來源網站</p>
+ <img src="img/webp/webp004.webp" width="1000" height="500" alt="">
+ <img src="img/webp/webp005.webp" width="1000" height="500" alt="">
+ <p> 選擇範圍條件後 下載資料檔<br>
+  <br>
+ <img src="img/webp/webp006.webp" width="1000" height="450" alt="">
+ <p>確認 資料檔 是否為 資料庫 可匯入 之 格式 </p>
+ <br>
+ <a href="https://docs.python.org/zh-tw/dev/library/csv.html">CSV</a>
+ <br>
+ <br>
+ <a href="https://learn.microsoft.com/zh-tw/sql/relational-databases/import-export/examples-of-bulk-import-and-export-of-xml-documents-sql-server?view=sql-server-ver16"> XML </a>
+ <br>
+ <br>
+ <img src="img/webp/webp007.webp" width="1000" height="450" alt="">
+ <br>
+ <p>搜尋線上資料庫 : Online sqlite </p>
+ <br>
+ <a href="https://sqliteonline.com/">SQLite online</a>
+ <br>
+ <br>
+ <img src="img/webp/webp008.webp" width="1000" height="500" alt="">
+ <p>把 資料檔 匯入線上資料庫 </p>
+ <img src="img/webp/webp009.webp" width="1000" height="500" alt="">
+ <img src="img/webp/webp010.webp" width="1000" height="500" alt="">
+ <img src="img/webp/webp011.webp" width="1000" height="500" alt="">
+ <p>可選擇 欄位名稱 原始檔預設 或是 系統自動給的 欄位名稱</p>
+ <img src="img/webp/webp012.webp" width="1000" height="500" alt="">
+ <img src="img/webp/webp013.webp" width="1000" height="500" alt="">
+ <img src="img/webp/webp014.webp" width="1000" height="500" alt="">
+ <p>確認選擇好後 按 確認</p>
+ <img src="img/webp/webp015.webp" width="1000" height="500" alt="">
+ <p>在旁邊 資料庫table(資料庫表格) 可見已新增 BTC/USD 的table </p>
+ <img src="img/webp/webp016.webp" width="1000" height="500" alt="">
+ <p>在右邊可看到可編輯語法 </p>
+ <img src="img/webp/webp017.webp" width="1000" height="500" alt="">
+ <p>進去後即可看到 sql語法及所有資料庫裡的資料</p>
+ <br>
+ <a href="https://miahsuwork.medium.com/%E7%AC%AC%E4%B9%9D%E9%80%B1-%E5%BE%8C%E7%AB%AF%E5%9F%BA%E7%A4%8E-%E8%B3%87%E6%96%99%E5%BA%AB%E7%B3%BB%E7%B5%B1-table-schema-sql-%E8%AA%9E%E6%B3%95-29243eeec35">Table schema、SQL 語法</a>
+ <br>
+ <br>
+
+
+ </p>
 
 
 
