--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
  <img src="img/webp/webp015.webp" width="1000" height="500" alt="">
  <p>在旁邊 資料庫table(資料庫表格) 可見已新增 BTC/USD 的table </p>
  <img src="img/webp/webp016.webp" width="1000" height="500" alt="">
- <p>在右邊可看到可編輯語法 </p>
+ <p>在右邊 可看到 編輯語法紀錄 </p>
  <img src="img/webp/webp017.webp" width="1000" height="500" alt="">
  <p>進去後即可看到 sql語法及所有資料庫裡的資料</p>
  <br>
