--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
  <p>到資料來源網站</p>
  <img src="img/webp/webp004.webp" width="1000" height="500" alt="">
  <img src="img/webp/webp005.webp" width="1000" height="500" alt="">
- <p> 選擇範圍條件後 下載資料檔<br>
+ <p> 選擇範圍條件後 下載資料檔<br></p>
   <br>
  <img src="img/webp/webp006.webp" width="1000" height="450" alt="">
  <p>確認 資料檔 是否為 資料庫 可匯入 之 格式 </p>
@@ -124,7 +124,6 @@
  <br>
 
 
- </p>
 
 
 
