--- a/index.html
+++ b/index.html
@@ -128,6 +128,22 @@
 
 
 
+ <br>
+ <br>
+ <br>
+ <h2>串接 前/後端,資料庫 <br> Fullstack set up</h2>
+ <br>
+ <br>
+ <p> 複製資料庫sql 語法 問ai如何串接 </p>
+ <img src="img/webp/webp0.webp" width="1000" height="500" alt="">
+ <img src="img/webp/webp0.webp" width="1000" height="500" alt="">
+
+
+
+
+
+
+
 
 
 
