--- a/index.html
+++ b/index.html
@@ -122,12 +122,10 @@
  <a href="https://miahsuwork.medium.com/%E7%AC%AC%E4%B9%9D%E9%80%B1-%E5%BE%8C%E7%AB%AF%E5%9F%BA%E7%A4%8E-%E8%B3%87%E6%96%99%E5%BA%AB%E7%B3%BB%E7%B5%B1-table-schema-sql-%E8%AA%9E%E6%B3%95-29243eeec35">Table schema、SQL 語法</a>
  <br>
  <br>
-
-
-
-
-
-
+ <img src="img/webp/webp018.webp" width="1000" height="500" alt="">
+ <p>確認檔案資料沒問題後 按下 Save DB 儲存 資料庫檔案 到電腦</p>
+ <img src="img/webp/webp019.webp" width="1000" height="500" alt="">
+ <p>在路徑 新增資料夾: db 在把資料庫檔案 放進去 </p>
  <br>
  <br>
  <br>
