--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
  <br>
  <img src="img/webp/webp018.webp" width="1000" height="500" alt="">
  <p>確認檔案資料沒問題後 按下 Save DB 儲存 資料庫檔案 到電腦</p>
- <img src="img/webp/webp019.webp" width="1000" height="500" alt="">
- <p>在路徑 新增資料夾: db 在把資料庫檔案 放進去 </p>
+ <img src="img/webp/webp019.webp" width="1000" height="350" alt="">
+ <p>在專案路徑內 新增資料夾 : db 在把資料庫檔案 放進去 </p>
  <br>
  <br>
  <br>
