--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
  <br>
  <img src="img/webp/webp018.webp" width="1000" height="500" alt="">
  <p>確認檔案資料沒問題後 按下 Save DB 儲存 資料庫檔案 到電腦</p>
- <img src="img/webp/webp019.webp" width="1000" height="350" alt="">
+ <img src="img/webp/webp019.webp" width="1000" height="250" alt="">
  <p>在專案路徑內 新增資料夾 : db 在把資料庫檔案 放進去 </p>
  <br>
  <br>
@@ -132,9 +132,10 @@
  <h2>串接 前/後端,資料庫 <br> Fullstack set up</h2>
  <br>
  <br>
- <p> 複製資料庫sql 語法 問ai如何串接 </p>
- <img src="img/webp/webp0.webp" width="1000" height="500" alt="">
- <img src="img/webp/webp0.webp" width="1000" height="500" alt="">
+ <p> 複製資料庫sql 語法 問ai如何串接html,app.js,json </p>
+ <img src="img/webp/webp020.webp" width="1000" height="350" alt="">
+ <img src="img/webp/webp021.webp" width="1000" height="350" alt="">
+ <p> </p>
 
 
 
