--- a/index.html
+++ b/index.html
@@ -135,7 +135,15 @@
  <p> 複製資料庫sql 語法 問ai如何串接html,app.js,json </p>
  <img src="img/webp/webp020.webp" width="1000" height="350" alt="">
  <img src="img/webp/webp021.webp" width="1000" height="350" alt="">
- <p> </p>
+ <img src="img/webp/webp022.webp" width="1000" height="500" alt="">
+ <p>貼上專案路徑,後端程式碼,前端程式碼,sql特定語法 詢問ai ,ai會越能理解你的問題</p>
+ <img src="img/webp/webp023.webp" width="1000" height="500" alt="">
+ <p>由於index.html 在public資料夾裡面 <br>若上傳到github github會抓不到</p>
+ <img src="img/webp/webp024.webp" width="1000" height="500" alt="">
+ <p>所以把index.html 搬出public資料夾 以便後續 聯網架接 會比較好處理</p>
+ <img src="img/webp/webp025.webp" width="1000" height="500" alt="">
+ <p>再請ai 寫新的架接程序 </p>
+
 
 
 
