--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetUpCpiWebSite</title>
-    <style>
+
+ <!--  import logo-->
+ <link rel="apple-touch-icon-precomposed" loading="lazy" sizes="144x144" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="btcLogo in 144 times 144" alt="logo in paypal 144 times 144"  />
+ <link rel="apple-touch-icon-precomposed" loading="lazy" sizes="114x114" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="btcLogo in 144 times 144" alt="logo in paypal 114 times 114"  />
+ <link rel="apple-touch-icon-precomposed" loading="lazy" sizes="72x72" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="btcLogo in 72 times 72" alt="logo in paypal 72 times 72"  />
+ <link rel="apple-touch-icon-precomposed" loading="lazy" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="LogoBTC " alt="BTC apple-touch-icon-precomposed " />
+ <link rel="shortcut icon" loading="lazy" sizes="196x196" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="BTCLOGO in shortcut icon which on the top of navigation bar in browser" alt=" BTCLOGO in shortcut icon which on the top of navigation bar in browser " />
+ <link rel="shortcut icon" loading="lazy" type="image/x-icon" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="Icon  of BTCLOGO whihc in  browser " alt="btcLogo" />
+ <link rel="icon" loading="lazy" type="image/x-icon" href="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=032" aria-label="logo-of-BTC in browser " alt="logo-of-BTC"/>
+
+
+ <style>
         body {
             padding: 150px;
             background-color: rgba(217, 217, 217, 0.63);
@@ -143,8 +154,58 @@
  <p>所以把index.html 搬出public資料夾 以便後續 聯網架接 會比較好處理</p>
  <img src="img/webp/webp025.webp" width="1000" height="500" alt="">
  <p>再請ai 寫新的架接程序 </p>
+ <img src="img/webp/webp026.webp" width="1000" height="500" alt="">
+ <p>確認本地端是否可以抓取資料庫資料檔
+ <br>
+  確認功能正常後 再把檔案push更新到github
+ </p>
+ <img src="img/webp/webp027.webp" width="1000" height="500" alt="">
+ <p>在到render註冊</p>
+ <br>
+ <a href="https://medium.com/starbugs/render-%E4%BE%86%E8%A9%A6%E8%A9%A6%E7%94%A8%E4%BE%86%E5%8F%96%E4%BB%A3-heroku-%E7%9A%84%E6%9C%8D%E5%8B%99%E5%90%A7-render-%E7%9A%84%E7%B6%B2%E8%B7%AF%E6%9C%8D%E5%8B%99%E9%83%A8%E7%BD%B2%E4%BB%8B%E7%B4%B9-b728e86d5716">  Render網路服務部署介紹</a>
+ <br>
+ <br>
+ <a href="https://stackoverflow.com/questions/52969697/deploying-react-app-on-github-pages-front-and-backend-in-the-same-repository" >Is deploying backend site on GitHub available? </a>
+ <br>
+ <br>
+ <a href="https://www.youtube.com/watch?v=bnCOyGaSe84&list=LL&index=14">How to Deploy a Node.js App to Render.com for Free</a>
+ <br>
+ <br>
+ <img src="img/webp/webp028.webp" width="1000" height="270" alt="">
+ <p> 建立 選取: Web Service</p>
+ <img src="img/webp/webp029.webp" width="1000" height="500" alt="">
+ <p>連接到GitHub Repository</p>
+ <img src="img/webp/webp030.webp" width="1000" height="500" alt="">
+ <p>選擇要連接的專案Repository</p>
+ <img src="img/webp/webp031.webp" width="1000" height="500" alt="">
+ <p>部屬後會有狀態列及專案部屬後網址</p>
 
+ <br>
+ <br>
+ <br>
+ <hr>
+ <br>
+ <h2> 原始碼Sourcecode</h2>
+ <br>
+ <a href="https://getbtcpriceliveonweb.onrender.com/">比特幣CPI <br>GetBTCPriceLiveOnWeb</a>
+ <br>
+ <br>
+ <a href="https://github.com/alfo0924/GetBTCPriceLiveOnWeb">比特幣CPI原始碼 <br> GetBTCPriceLiveOnWebSourcecode</a>
+ <br>
+ <br>
+ <a href="https://zealous-moss-0145c361e.5.azurestaticapps.net/">比特幣CPI 說明頁 <br>GetBTCPriceWebDescription</a>
+ <br>
+ <br>
+ <a href="https://github.com/alfo0924/GetBTCPriceLiveOnWeb">比特幣CPI 說明頁原始碼 <br> GetBTCPriceWebDescriptionSourcecode</a>
+ <br>
+ <br>
 
+ <a href="https://zealous-moss-0145c361e.5.azurestaticapps.net/"><br>GetBTCPriceWebDescription</a>
+ <br>
+ <br>
+ <a href="https://github.com/alfo0924/GetBTCPriceLiveOnWeb">比特幣CPI 說明頁原始碼 <br> GetBTCPriceWebDescriptionSourcecode</a>
+ <br>
+ <br>
 
 
 
