--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
  <a href="https://ithelp.ithome.com.tw/articles/10235682">安裝 Node js -- express + sqlite</a>
  <br>
  <br>
- <a href=""> 資料庫整合</a>
+ <a href="https://expressjs.com/zh-tw/guide/database-integration.html"> 資料庫整合</a>
  <br>
  <br>
  <br>
@@ -194,13 +194,6 @@
  <br>
  <br>
  <a href="https://zealous-moss-0145c361e.5.azurestaticapps.net/">比特幣CPI 說明頁 <br>GetBTCPriceWebDescription</a>
- <br>
- <br>
- <a href="https://github.com/alfo0924/GetBTCPriceLiveOnWeb">比特幣CPI 說明頁原始碼 <br> GetBTCPriceWebDescriptionSourcecode</a>
- <br>
- <br>
-
- <a href="https://zealous-moss-0145c361e.5.azurestaticapps.net/"><br>GetBTCPriceWebDescription</a>
  <br>
  <br>
  <a href="https://github.com/alfo0924/GetBTCPriceLiveOnWeb">比特幣CPI 說明頁原始碼 <br> GetBTCPriceWebDescriptionSourcecode</a>
