--- a/index.html
+++ b/index.html
@@ -91,6 +91,29 @@
  <br>
  <br>
  <br>
+ <h2> 前端爬蟲 Frontend WebCrawler </h2>
+ <br>
+ <p>搜尋 Jina Ai</p>
+ <br>
+ <a href="https://jina.ai/">Jina Ai</a>
+ <br>
+ <br>
+ <img src="img/webp/webp032.webp" width="1000" height="350" alt="">
+ <img src="img/webp/webp033.webp" width="1000" height="450" alt="">
+ <p>往下滑</p>
+ <img src="img/webp/webp034.webp" width="1000" height="450" alt="">
+ <p>選擇Reader</p>
+ <img src="img/webp/webp035.webp" width="1000" height="450" alt="">
+ <p>再往下滑</p>
+ <img src="img/webp/webp036.webp" width="1000" height="450" alt="">
+ <p>輸入要分析的網站</p>
+ <img src="img/webp/webp037.webp" width="1000" height="500" alt="">
+ <p>再按下Fetch Content 以抓取網站資料</p>
+ <img src="img/webp/webp038.webp" width="1000" height="350" alt="">
+ <p>可以問Ai 網站是如何抓取/使用Api 並寫成Html 以方便理解</p>
+ <br>
+ <br>
+ <br>
  <h2>資料庫備整<br> Database preparation </h2>
  <p>到資料來源網站</p>
  <img src="img/webp/webp004.webp" width="1000" height="500" alt="">
